made simulationdata printable